# parkir

./: .gitignore  Cargo.toml  README.md  route.rs
src/: dbpool.rs  main.rs  route.rs
src/controllers/: jukir.rs  landing.rs  mod.rs  parkir.rs  response.rs  tarif.rs  transaksi.rs
src/models/: jukir.rs  mod.rs  parkir.rs  tarif.rs  transaksi.rs
