[package]
name = "parkir"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
deadpool-postgres = "0.14.1"
serde = "1.0.228"
tokio = "1.48.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
